Modify file inputs to accept specific audio formats
Updated file input accept attributes to include specific audio formats.

--- a/index.html
+++ b/index.html
@@ -259,10 +259,9 @@
         </label>
     </div>
 
-    <input type="file" id="focus-files" multiple accept="audio/*">
-    <input type="file" id="short-files" multiple accept="audio/*">
-    <input type="file" id="long-files" multiple accept="audio/*">
-
+    <input type="file" id="focus-files" multiple accept=".mp3, .m4a, .wav, audio/*">
+    <input type="file" id="short-files" multiple accept=".mp3, .m4a, .wav, audio/*">
+    <input type="file" id="long-files" multiple accept=".mp3, .m4a, .wav, audio/*">
     <audio id="audio-player"></audio>
 
     <script>
